--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,18 +3,15 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
+  "password": "admin",
   "database": "postgres",
-  "password": "123456",
   "entities": [
     "src/app/models/*.ts"
   ],
   "migrations": [
     "src/database/migrations/*.ts"
   ],
-  "subscribers": [
-    "src/subscriber/**/*.ts"
-  ],
   "cli": {
-    "migrationsDir": "src/database/migrations"
+      "migrationsDir": "src/database/migrations"
   }
 }
